# ecc-learning-engine

./: .gitignore  ACCESSIBILITY_GUIDE.md  ADVANCED_COMPONENT_SYSTEM.md  ASSET_PIPELINE_SYSTEM.md  AUDIO_UI_SYSTEM.md  BUILD_SYSTEM_FIXED.md  CMakeLists.txt  CMakeLists.wasm.txt  CMakeLists_WebAssembly.txt  CMakeLists_complex.txt  CMakeLists_original.txt  CMakeLists_ultra_minimal.txt  CMakeLists_working.txt  COMPREHENSIVE_TEST_REPORT.md  DEBUG_SYSTEM_README.md  DEBUG_TOOLS_SYSTEM.md  DOCUMENTATION_SUMMARY.md  ECSCOPE_UX_STRATEGY.md  ECS_PERFORMANCE_BENCHMARKER_IMPLEMENTATION.md  ECS_REGISTRY_README.md  GUI_SYSTEM_README.md  NETWORK_UI_SYSTEM.md  README.md  RENDERING_UI_SYSTEM.md  TESTING_FRAMEWORK_README.md  TEST_RESULTS_FINAL.md  VERIFICATION_REPORT.md  VISUAL_ECS_INSPECTOR_IMPLEMENTATION_SUMMARY.md  VISUAL_ECS_INSPECTOR_INTEGRATION.md  all-errors.txt  build-wasm.sh  build_matrix.json  comprehensive_ui_test.cpp  cross_platform_test.cpp  launch_docs.sh  quick_performance_demo  setup_deps.sh  simple_core_test  simple_core_test.cpp  simple_physics_test  (+4 more)
.github/workflows/: ci.yml  comprehensive-test-suite.yml  comprehensive-testing.yml  comprehensive_testing.yml  cross_platform_testing.yml
benchmarks/: asset_benchmarks.cpp  fiber_job_system_benchmark.cpp  memory_benchmarks.cpp  physics_performance.cpp  query_engine_benchmarks.cpp  ui_performance_benchmark.cpp
benchmarks/audio/: audio_raytracing_benchmark.cpp
build_minimal/: ecscope_standalone_performance
cmake/: ECScope-config.cmake.in  ECScopeConfig.cmake.in  cmake_uninstall.cmake.in  detect_cpu_features.cpp  ecscope.pc.in  platform_config.h.in
docs/: API_REFERENCE.md  ARCHITECTURE.md  CROSS_PLATFORM_IMPLEMENTATION_SUMMARY.md  CROSS_PLATFORM_TESTING_GUIDE.md  DEBUGGING_TOOLS.md  DOCUMENTATION_INDEX.md  ECS_INSPECTOR_README.md  MEMORY_LAB.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PLUGIN_SYSTEM.md  README.md  RESPONSIVE_DESIGN_SYSTEM.md  SCRIPTING_INTEGRATION_GUIDE.md  SCRIPTING_SYSTEM.md  UI_PERFORMANCE_OPTIMIZATION.md
examples/: README.md  advanced_memory_examples.cpp  foundation-demo.cpp  gui_comprehensive_demo.cpp  integration_test.cpp  memory_integration_demo.cpp  modern_ecs_demo.cpp  performance_test.cpp  physics_components_demo.cpp  plugin_system_demo.cpp  quick_performance_demo.cpp  rendering_2d_demo.cpp  rendering_benchmarks.cpp  standalone_performance.cpp  standalone_test.cpp  ultra_minimal_performance.cpp  ultra_minimal_test.cpp  visual_ecs_inspector_demo.cpp  working_performance.cpp  working_test.cpp
examples/components/: CMakeLists.txt  comprehensive_example.cpp
examples/plugins/: CMakeLists.txt  advanced_system_plugin.cpp  basic_component_plugin.cpp  basic_component_plugin.json  ecs_component_plugin.cpp  hello_world_plugin.cpp  plugin_template_generator.cpp  rendering_demo_plugin.cpp
failed-workflow-logs/: all-errors.txt  run-17513466372.summary.txt  run-17513651945.summary.txt  run-17513686198.summary.txt  run-17513700518.summary.txt  run-17513722263.summary.txt
failed-workflow-logs-20250906-131329/: all-errors.txt  run-17513466372.summary.txt  run-17513651945.summary.txt  run-17513686198.summary.txt  run-17513700518.summary.txt  run-17513722263.summary.txt
include/: ecscope.hpp
scripts/: analyze_performance_results.py  analyze_test_results.py  build_docs.py  check_performance_regressions.py  format_doc_validation.py  generate_comprehensive_report.py  run_comprehensive_tests.sh  valgrind.suppressions  validate_documentation.py
src/: advanced_profiler.cpp  advanced_shader_compiler.cpp  advanced_shader_ecs_integration.cpp  advanced_shader_library.cpp  ecs_performance_benchmarker.cpp  ml_prediction_system.cpp  parallel_computing_lab.cpp  shader_debugging_tools.cpp  shader_runtime_system.cpp  sparse_set_visualizer.cpp  visual_debug_interface.cpp  visual_ecs_inspector.cpp  visual_shader_editor.cpp
src/app/: main.cpp  (+2 more)
tests/: CMakeLists.txt  main.cpp  physics_engine_test.cpp  physics_engine_tests.cpp  query_engine_tests.cpp  scripting_integration_tests.cpp  test_modern_ecs.cpp
tests/audio/: test_audio_comprehensive_systems.cpp  test_audio_systems.cpp  test_comprehensive_audio_systems.cpp
tests/components/: test_advanced_components.cpp
tests/cross_platform/: gui_compatibility_test.cpp  platform_specific_tests.cpp
tests/ecs/: test_ecs_performance_systems.cpp  test_registry.cpp
tests/educational/: test_educational_systems.cpp  test_educational_systems_comprehensive.cpp
tests/framework/: ecscope_test_framework.hpp
tests/integration/: ecs_system_integration_tests.cpp  physics_components_test.cpp  test_comprehensive_system_integration.cpp  test_cross_system_comprehensive_integration.cpp  test_cross_system_integration.cpp
tests/memory/: memory_tests.cpp  test_comprehensive_memory_systems.cpp  test_memory_safety_threading.cpp  test_memory_systems.cpp
tests/networking/: test_comprehensive_networking_systems.cpp  test_networking_comprehensive_systems.cpp  test_networking_systems.cpp
tests/performance/: ecs_performance_tests.cpp  test_comprehensive_performance_suite.cpp  test_performance_regression.cpp  test_performance_regression_suite.cpp
tests/physics/: test_comprehensive_physics_systems.cpp  test_physics_systems.cpp
tests/rendering/: test_rendering_system.cpp
tests/stress/: stress_tests.cpp
tests/unit/: ecs_component_tests.cpp
tools/: api-doc-generator.py  build.py  collect-logs.sh  doc_generator.py
web/: CMakeLists.txt  README.md  index.html
web/assets/: shell.html
web/css/: components.css  main.css
web/examples/: basic-demo.html  performance-benchmark.html
web/include/: web_application.hpp  web_audio.hpp  web_bindings.hpp  web_input.hpp  web_memory.hpp  web_performance.hpp  web_renderer.hpp
web/js/: demos.js  ecscope-wasm-loader.js  main.js  performance-charts.js  tutorials.js  ui-components.js
web/js/demos/: complete-demos.js
web/js/performance/: performance-system.js
web/js/tutorials/: interactive-tutorials.js
web/src/: bindings.cpp  post.js  pre.js  web_application.cpp
web/src/bindings/: ecs_bindings.cpp
web/tools/: build.py
(+641 files in other folders)
